--- a/Tarea_2_Carlos_Emmanuel_Arroyo_Torres/Soporte.html
+++ b/Tarea_2_Carlos_Emmanuel_Arroyo_Torres/Soporte.html
@@ -20,6 +20,26 @@
         <input type="text" name="" id="" placeholder="Dígite el año">
     </fieldset>
     <fieldset>
+        <label for="">Sistema Operativo</label>
+        <select>
+            <Option>Seleccione el Sistema Operativo</Option>
+            <Option>Windows</Option>
+            <Option>Mac</Option>
+            <Option>Ubuntu</Option>
+        </select>
+        <label for="">Navegador</label>
+        <select>
+            <option value="">Seleccione el Navegador</option>
+            <option value="">Google Chrome</option>
+            <option value="">Mozilla Firefox</option>
+            <option value="">Apple Safari</option>
+            <option value="">Microsoft Edge</option>
+            <option value="">Opera</option>
+            <option value="">Brave</option>
+            <option value="">Vivaldi</option>
+        </select>
+    </fieldset>
+    <fieldset>
         <Legend>Describa en detalle lo sucedido</Legend>
         <Textarea name="" id="">Por favor sea lo más específico posible. Basicamente indiquenos los pasos que causan el problema, como funciona normalmente y que hace ahora.</Textarea>
     </fieldset>
@@ -30,7 +50,7 @@
         <label for="">Primer Apellido</label>
         <input type="text" name="" id="" placeholder="Escriba su primer apellido">
         <label for="">Segundo Apellido</label>
-        <input type="text" name="" id="" placeholder="Esxcriba su segundo apellido">
+        <input type="text" name="" id="" placeholder="Escriba su segundo apellido">
     </fieldset>
     <fieldset>
         <legend>¿Dónde se tropezó con el problema?</legend>
