--- a/Tarea_2_Carlos_Emmanuel_Arroyo_Torres/Soporte.html
+++ b/Tarea_2_Carlos_Emmanuel_Arroyo_Torres/Soporte.html
@@ -24,8 +24,10 @@
         <select>
             <Option>Seleccione el Sistema Operativo</Option>
             <Option>Windows</Option>
-            <Option>Mac</Option>
-            <Option>Ubuntu</Option>
+            <Option>Mac OS</Option>
+            <Option>Linux</Option>
+            <option value="">Android</option>
+            <option value="">IOS</option>
         </select>
         <label for="">Navegador</label>
         <select>
